wal-macros/tests/rsx_macro_tests/elements/element_without_closing_fail.stderr
error: This start tag does not have a corresponding end tag. (hint: try adding `</div>`)
 --> tests/rsx_macro_tests/elements/element_without_closing_fail.rs:4:12
  |
4 |     rsx! { <div> };
  |            ^^^^^

error: This start tag does not have a corresponding end tag. (hint: try adding `</div>`)
 --> tests/rsx_macro_tests/elements/element_without_closing_fail.rs:5:12
  |
5 |     rsx! { <div> "Hello world!" };
  |            ^^^^^

error: This start tag does not have a corresponding end tag. (hint: try adding `</div>`)
 --> tests/rsx_macro_tests/elements/element_without_closing_fail.rs:6:12
  |
6 |     rsx! { <div> { String::from("Hello world") } };
  |            ^^^^^

error: This start tag does not have a corresponding end tag. (hint: try adding `</div>`)
 --> tests/rsx_macro_tests/elements/element_without_closing_fail.rs:7:12
  |
7 |     rsx! { <div><div></div> };
  |            ^^^^^
